<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              android:gravity="center"
              android:id="@+id/welcomeText"
              android:textSize="36sp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp" android:text="Welcome to the app!" app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>