<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/registrationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerButton"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/emailField"
                android:hint="e-mail"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/passwordField"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/passwordField"
                android:hint="password"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/confirmPasswordField"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/confirmPasswordField"
                android:hint="confirm password"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/registerButton"/>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="invisible"
            android:id="@+id/registrationSucceededView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="Registration was successful!"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button android:layout_marginTop="8dp"
                android:id="@+id/openLoginButton"
                android:text="Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</FrameLayout>